[tool.poetry]
name = "infrahub_ansible_modules"
version = "1.0.4"
description = "Ansible collection to interact with Infrahub's API"
authors = ["OpsMill <info@opsmill.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ansible-core = ">=2.15.9"
ansible-lint = "*"
infrahub-sdk = {version = "^0, >=0.9.1", extras = ["all"]}
codecov = "*"
deepdiff = "*"
cryptography = ">=42.0.0"
jinja2 = ">=3.1.3"
jmespath = "*"
pytest = "*"
pytest-mock = "*"
pytest-xdist = "*"
pytest-forked = "^1.6.0"
pyyaml = "*"
mock = "^4.0.2"
antsibull = "^0.45.1"
importlib-metadata = "1.7.0"
pytz = "*"
packaging = "*"
jsondiff = "*"
sphinx_rtd_theme = "*"
hypothesis = "^6.8.0"
pytest-pythonpath = "^0.7.3"
parameterized = "^0.8.1"
invoke = "^2.2.0"
bandit = "^1.7.7"
antsibull-docs = "^1.7.3"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
ruff = "0.4.1"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests"
]
pythonpath = ["."]

[tool.ruff]
line-length = 120

exclude = [
        ".git",
        ".tox",
        ".venv",
        "env",
        "_build",
        "build",
        "dist",
        "examples",
]

[tool.ruff.lint]
preview = true

task-tags = [
    "FIXME",
    "TODO",
    "XXX",
]

select = [
    "ASYNC", # flake8-async
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "C90",   # mccabe complexity
    "DJ",    # flake8-django
    "DTZ",   # flake8-datetimez
    "E",     # pycodestyle errors
    "EXE",   # flake8-executable
    "F",     # pyflakes
    "I",     # isort-like checks
    "ICN",   # flake8-import-conventions
    "INP",   # flake8-no-pep420
    "N",     # pep8-naming
    "PIE",   # flake8-pie
    "PL",    # pylint
    "PYI",   # flake8-pyi
    "Q",     # flake8-quotes
    "RET",   # flake8-return
    "TCH",   # flake8-type-checking
    "TRIO",  # flake8-trio
    "T10",   # flake8-debugger
    "W",     # pycodestyle warnings
    "YTT",   # flake8-2020
]

ignore = [

##################################################################################################
# The ignored rules below should be removed once the code has been updated, they are included    #
# like this so that we can reactivate them one by one. Alternatively ignored after further       #
# investigation if they are deemed to not make sense.                                            #
##################################################################################################
    "B904",     # Within an `except` clause, raise exceptions with `raise ... from err` or `raise ... from None` to distinguish them from errors in exception handling
    "C408",     # Unnecessary `dict` call (rewrite as a literal)
    "E402",     # Module level import not at top of file
    "INP001",   # Is part of an implicit namespace package
    "N806",     # Variable in function should be lowercase
    "PLC0415",  # `import` should be at the top-level of a file
    "PLR0912",  # Too many branches
    "PLR6201",  # Use a `set` literal when testing for membership
    "PLR6301",  # Method could be a function, class method, or static method
    "PLR1702",  # Too many nested blocks
    "PLR0913",  # Too many arguments in function definition
    "RET504",   # Unnecessary assignment before `return` statement
]

#https://docs.astral.sh/ruff/formatter/black/
[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["infrahub"]

[tool.ruff.lint.pycodestyle]
max-line-length = 150

[tool.ruff.lint.mccabe]
# Target max-complexity=10
max-complexity = 33

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"